Adding "Welcome to IDP 2021"
Update the page_with_link_to_list.html file by adding a welcome message by Adriaan MEULENBELT-ZUMER

--- a/page_with_link_to_list.html
+++ b/page_with_link_to_list.html
@@ -1,4 +1,5 @@
-Hello !<br /><br/><br/>
+<br /><big>Hello !</big><br/>
+Welcome to IDP 2021<br/>
 
 <a href="All_employees.html">Click here to see the employees </a>
 
