--- a/one_employee.html
+++ b/one_employee.html
@@ -15,3 +15,4 @@ City : <input name="ville" type="text" value="Beverly Hills" /> <br />
 Email : <input name="mail" type="text" value="brad.pitt@efrei.fr" /> <br /> <br /> 
  
 <input name="detail" type="button" value="Save" /> <input name="detail" type="button" value="Cancel" />
+<input type="button" value="Cancel" onclick="window.location.href='all_employee.html';"/>
