--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <strong>IDP 2021</strong> <br /><br />
 
 Login <br /><br />
-
+Please enter your credentials
 <table style="border:0px; spacing:5; padding: 2px;">
     <tbody>
         <tr>
